<resources>
    <string name="app_name">bookworms</string>
    <string name="title_explore">Explore</string>
    <string name="title_cart">Cart</string>
    <string name="title_redeem">Redeem</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookcover">BookCover</string>
    <string name="share_this_book_to_gain_point">Share To Your Friend!</string>
    <string name="share">Share</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an Account ?</string>
    <string name="password_validation">* Invalid Password</string>
    <string name="referral_code_optional">Referral Code (Optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="start_your_journey">Start your journey !</string>
    <string name="create_account">Create Account.</string>
    <string name="the_worms_miss_you">the worms miss you !</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="send">Send</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="verify">Verify</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="delete_confirmation_message">Are you sure you want to delete these item(s)?</string>
    <string name="no_selected_any_item_message">You have not selected any item.</string>
    <string name="change">Change</string>
    <string name="added_cart_successfully_message">Item Successfully Added to Cart.</string>
    <string name="shipping">Shipping</string>
    <string name="profile">Profile</string>
    <string name="edit_personal_information">Edit personal information</string>
    <string name="personal_info">Personal Info</string>
    <string name="shipping_and_contact_info">Shipping and Contact Info</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="update">Update</string>
    <string name="information_updated">Information Updated</string>
    <string name="updating">Updating...</string>
    <string name="username_required">- username is required.</string>
    <string name="username_short">- username is too short.</string>
    <string name="name_requried">- name is required.</string>
    <string name="name_short">- Fullname is too short.</string>
    <string name="contact_required">- contact number is required.</string>
    <string name="invaliad_contact">- Invalid contact number.</string>
    <string name="address_required">- address is required.</string>
    <string name="address_short">- address is too short.</string>
    <string name="state_required">- state is required.</string>
    <string name="postal_requried">- postal code is required.</string>
    <string name="postal_invalid">- invalid postal code.</string>
    <string name="city_required">- city is required.</string>
    <string name="password_required">Password is required !</string>
    <string name="password_minimum_6">- Password must be at least 6 characters !</string>
    <string name="confirm_password_required">- Confirm Password is required !</string>
    <string name="conpassword_not_match">- Confirm Password does not match Password !</string>
    <string name="password_changed">Password changed</string>
    <string name="oh_no">Oh No...</string>
    <string name="password_change_unsuccessful">password change unsuccessfully. Please try again later</string>
    <string name="change_password">Change Password</string>
    <string name="our_location">Our Location</string>
    <string name="no_more_history">- no more history -</string>
    <string name="_500_points">+ 500 points</string>
    <string name="referral_history">Referral History</string>
    <string name="invited_user">Invited User</string>
    <string name="history">History</string>
    <string name="my_voucher">My Voucher</string>
    <string name="discount">Discount</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="voucher">Voucher</string>
    <string name="ways_of_earning_points">Ways of Earning Points</string>
    <string name="purcharse_items">Purcharse Items</string>
    <string name="purchase_item_description">Every purchase of the products will reward amount of points while. Gold or Platinum level will enjoy extra points on every purchase.</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="refer_friends_description">register account with below referal code to earn more points.</string>
    <string name="copy_link">Copy Link</string>
    <string name="usable_points">usable points</string>
    <string name="privileges"> privileges</string>
    <string name="earn_more">earn more </string>
    <string name="upgrade_gold"> points to upgrade Gold</string>
    <string name="upgrade_platinum"> points to upgrade Platinum</string>
    <string name="precious_member">You\'re our precious Platinum member</string>
    <string name="points">points</string>
    <string name="copied">Copied</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="active_voucher">Active Voucher</string>
    <string name="browse_voucher">Browse Voucher</string>
    <string name="no_more_voucher">- no more voucher -</string>
    <string name="level_not_eligible">Sorry, You\'re not eligible for this Voucher</string>
    <string name="earn_more_join_benefits">Earn more points to upgrade your level in-order to enjoy more benefits</string>
    <string name="not_enough_points">You have not enough points to redeem it</string>
    <string name="voucher_claim_successfully">Voucher claim successfully !</string>
    <string name="use_within_14days">Don\'t forget to use your voucher within 14 days.</string>
    <string name="claim">Claim</string>
    <string name="use">Use</string>
    <string name="got_it">Got it !</string>
    <string name="verified">Verified</string>
    <string name="incorrect_confimration_code">Incorrect Confirmation Code.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="verifying">Verifying...</string>
    <string name="resend">Resend</string>
    <string name="alert_daily_reward_message">Don\'t miss out daily check in rewards!</string>
    <string name="step_to_check_in_message"><![CDATA[Go to Profile -> Daily Check In to complete your check in!]]></string>
    <string name="search_hint">Search...</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="book_detail">Book Detail</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="languages">Languages</string>
    <string name="qty">QTY</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total :</string>
    <string name="check_out">Check Out</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="enter_voucher_code">Enter Voucher Code</string>
    <string name="apply">Apply</string>
    <string name="payment_details">Payment Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="voucher_code_discount">Voucher Code Discount</string>
    <string name="order_amount">Order Amount</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_fees">Shipping Fees</string>
    <string name="earn_more_10_cashback">Earn more 10% points cashback</string>
    <string name="earn_more_15_cashback">Earn more 15% points cashback</string>
    <string name="please_select_a_payment_method">Please select a payment method.</string>
    <string name="cancel">Cancel</string>
    <string name="invalid">Invalid</string>
    <string name="not_enough_point">Not Enough Points!</string>
    <string name="share_bookworm_to_more_ppl">\"Share BookWorm to more people and earn more points. \"</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="change_language">Change Language</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">We would love to hear your thoughts, suggestions, concerns or problems with anything so we can improve!</string>
    <string name="rate_our_applicaion">Rate Our Applicaion !</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="comment">Comment</string>
    <string name="suggestion">Suggestion</string>
    <string name="questions">Questions</string>
    <string name="describe_your_feedback">Describe Your Feedback:</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>

    <string-array name="array_profile">
        <item>Daily Check In</item>
        <item>Spin Lucky Wheel</item>
        <item>Language</item>
        <item>Change Password</item>
        <item>Refer a Friend</item>
        <item>Referral History</item>
        <item>Our Location</item>
        <item>Feedback</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="admin_array_profile">
        <item>Daily Check In</item>
        <item>Spin Lucky Wheel</item>
        <item>Language</item>
        <item>Change Password</item>
        <item>Refer a Friend</item>
        <item>Referral History</item>
        <item>Our Location</item>
        <item>Admin Panel</item>
        <item>Feedback</item>
        <item>Log Out</item>
    </string-array>


    <string-array name="category">
        <item>Business</item>
        <item>History</item>
        <item>Romantic</item>
        <item>Education</item>
        <item>Technology</item>
        <item>Motivation</item>
    </string-array>


    <string-array name="language">
        <item>EN</item>
        <item>CH</item>
        <item>MY</item>
    </string-array>

</resources>
